--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,11 @@
 # main links links
 main:
+  - title: "Research Experience"
+    url: /research_experience
+    
+  - title: "Work Experience"
+    url: /work_experience
+    
   - title: "Publications"
     url: /publications/
 
