--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,11 +8,11 @@ main:
     url: /research_experience
     
   - title: "Publications"
-    url: /publications/
+    url: /publications
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /teaching   
     
   - title: "CV"
-    url: /cv/
+    url: /cv
 
