--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ author:
   bio              : "Software Development Engineer, Amazon"
   location         : "Bangalore, India"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  pubmed           : 
+  googlescholar    : "https://scholar.google.com/citations?user=lVNuWt0AAAAJ"
   email            : "atithgandhi13@gmail.com"
   researchgate     :  
   uri              :
