--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Atith Gandhi"
-  avatar           : "profile.png"
+  avatar           : "photo.JPG"
   bio              : "Software Development Engineer, Amazon"
   location         : "Bangalore, India"
   employer         :
